# a2d

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_build.md  a2d.h  ad.cpp  make_mat_inlines.py  matops.h  test.cpp
.github/workflows/: clang-format-check.yml  unit_tests.yml
_deprecated/: a2dkokkos.h  a2dmatcore2d.h  a2dmatops2d.h  a2dmatops3d.h  a2dmemory.h  a2dveccore.h  a2dvecops3d.h  make_mat_inlines.py  multiarray.h
_deprecated/fem/: basis.h  elasticity.h  element.h  functional.h  helmholtz.h
_deprecated/multiphysics/: lagrange_hex_basis.h  lagrange_quad_basis.h
a2d/: __init__.py  inp.py  parse_inp.py  utils.py
docs/: operations.tex  theory.md
examples/: CMakeLists.txt  elasticity.cpp  test_numeric.cpp  toy_helmholtz.cpp  toy_multiarray.cpp
examples/_deprecated/: CMakeLists.txt  _toy_elasticity.cpp  elasticity.cpp  rigid_body.cpp  test_feelement.cpp  test_grad_hess.cpp  test_numeric.cpp  toy_helmholtz.cpp  toy_tetramesh.cpp
examples/ad/: CMakeLists.txt  test_ad.cpp  toy_ad.cpp
examples/amgx/: CMakeLists.txt  amgx_linear_elastic.cpp  config.json
examples/amgx/basic/: CMakeLists.txt  config.json  toy_amgx.cpp
examples/amgx/linear_elastic/: CMakeLists.txt  amgx.cpp  amgx_mpi.cpp  amgx_mpi_part.cpp  amgx_part.cpp  elasticity.cpp  linear_elastic_amgx.cpp
examples/basic/: CMakeLists.txt  Makefile  _toy_elasticity.cpp  elasticity.cpp  hdiv.cpp  heat_topology.cpp  multiphysics.cpp  spectral.cpp  sphere.cpp  test_feelement.cpp  test_grad_hess.cpp  test_numeric.cpp  tests.cpp  tetra_3d.vtk.in  topology.cpp  topology.h  topology_elasticity.cpp  topology_elasticity.h  topology_heat.cpp  topology_heat.h  topology_opt.cpp  topology_paropt_prob.h  toy_elasticity.cpp  toy_helmholtz.cpp  toy_multiarray.cpp  toy_profiler.cpp  toy_readvtk.cpp  toy_tetramesh.cpp  verify_L2element.cpp  verify_element.cpp
examples/basic/rigid_body/: CMakeLists.txt  rigid_body.cpp
examples/cholesky/: CMakeLists.txt  cholesky.cpp  cholesky_fem.cpp  cholesky_standalone.cpp  visualize_mtx.py
examples/cpp/: CMakeLists.txt  test_grad_hess.cpp  toy_elasticity.cpp  toy_helmholtz.cpp
examples/elasticity/: CMakeLists.txt  Makefile  Makefile.in.info  a2dmatcore.h  a2dobjs.h  a2dprofiler.h  a2dtmp.h  a2dtmp2d.h  a2dtmp3d.h  a2dtypes.h  basis.h  basis3d.h  block_numeric.h  constitutive.h  elasticity.cpp  elasticity.h  elasticity.py  elasticity2d.py  elasticity3d.h  elasticity_impl.cpp  elasticity_impl.h  element.h  example.cpp  example2d.cpp  functional.h  helmholtz3d.h  hess.cpp  inp.py  linear_elasticity.pyx  make_mat_inlines.py  model.h  multiarray.h  parallel.h  quadrature.h  setup.py  sparse_amd.h  sparse_amg.h  sparse_matrix.h  sparse_numeric.h  sparse_symbolic.h  (+3 more)
examples/elasticity/tests/: CMakeLists.txt  complex_step.py  generate_values.py  test_commons.h  test_matcore.cpp  test_matcore2d.cpp  test_tmp.cpp  test_tmp2d.cpp  test_tmp3d.cpp
examples/elasticity/toys/: CMakeLists.txt  nonlinear_elasticity.py  nonlinear_topology.py  toy_elasticity.cpp  toy_helmholtz.cpp  toy_profiler.cpp
examples/hdiv/: CMakeLists.txt  hdiv.cpp
examples/kokkos/: CMakeLists.txt  scratchpad.cpp
examples/kokkos/cuda_kernel/: CMakeLists.txt  cuda_kernel.cpp
examples/kokkos/hello_kokkos/: CMakeLists.txt
examples/kokkos/scratchpad/: CMakeLists.txt  scratchpad.cpp
examples/kokkos/view/: CMakeLists.txt  view.cpp
examples/parallel_element/: CMakeLists.txt  parallel_element.cpp
examples/paropt/: CMakeLists.txt  paropt_example.cpp
examples/python/: elasticity.py  nonlinear_elasticity.py  nonlinear_topology.py
examples/sparse_matrix/: CMakeLists.txt  bsr_to_csr.cpp  visualize_mtx.py
examples/spectral/: CMakeLists.txt  spectral.cpp
examples/sphere/: CMakeLists.txt  sphere.cpp
examples/test/: Makefile
examples/test_verify/: CMakeLists.txt  test_multiphysics.cpp  test_profiler.cpp  verify_L2element.cpp  verify_element.cpp
examples/topology_optimization/: CMakeLists.txt  topology_elasticity.cpp  topology_elasticity.h  topology_heat.cpp  topology_heat.h  topology_paropt_prob.h  toy_elasticity.cpp  toy_grad_check.cpp
examples/topology_optimization_2d/: 2d_analysis.cpp  2d_topology.cpp  2d_topology.h  CMakeLists.txt  integrand_compliance.h  run_cases.sh
include/: a2d.h  a2dcore.h  a2dcuda.h  a2ddefs.h  a2denum.h  a2dkokkos.h  a2dlayout.h  a2dmatcore2d.h  a2dmatcore3d.h  a2dmatops2d.h  a2dmatops3d.h  a2dmatveccore3d.h  a2dmatvecops3d.h  a2dmemory.h  a2dobjs.h  a2dtmp2d.h  a2dtmp3d.h  a2dtuple.h  a2dtypes.h  a2dveccore3d.h  a2dvecops3d.h  adscalar.h  array.h  block_numeric.h  multiarray.h  parallel.h  shell_dev_ops.h  shell_development.h  slice_numeric.h
include/ad/: README.md  a2dbinary.h  a2dgemm.h  a2dgreenstrain.h  a2dhadamard.h  a2disotropic.h  a2dmat.h  a2dmatdet.h  a2dmatinv.h  a2dmatsum.h  a2dmattovec.h  a2dmattrace.h  a2dmatvecmult.h  a2dobj.h  a2dquaternion.h  a2dscalar.h  a2dscalarops.h  a2dstack.h  a2dsymeigs.h  a2dsymmatmulttrace.h  a2dsymrk.h  a2dsymsum.h  (+9 more)
pybind11/: CMakeLists.txt  example.cpp  pya2d.cpp  pya2d_2d.cpp
python/: Mat_to_SymMat_code_converter.py
src/: a2dmatcore.h  a2dmatops.h  a2dobjs.h  a2dveccore.h  a2dvecops.h
tests/: A2DTestConstructor.py  CMakeLists.txt  TestConstructor.py  complex_step.py  my_test_do_not_commit.cpp  test_a2dtuple.cpp  test_bsr_to_csr_csc.cpp  test_commons.h  test_feelementvector.cpp  test_matcore2d.cpp  test_matcore3d.cpp  test_matops2d.cpp  test_matops3d.cpp  test_matvecops3d_a2d.cpp  test_matvecops3d_ad.cpp  test_memory.cpp  test_tmp2d.cpp  test_tmp3d.cpp  test_vecops3d.cpp  test_vecops3d_a2d.cpp  test_vecops3d_jg.cpp
tests/_deprecated/: test_matcore2d.cpp  test_matops2d.cpp  test_matops3d.cpp
tests/ad/: CMakeLists.txt  test_a2dgemm.cpp  test_a2dmat.cpp  test_a2dmatdet.cpp  test_a2dmatinv.cpp  test_ad_expressions.cpp
tests/ad/core/: CMakeLists.txt  test_a2dgemmcore.cpp  test_a2dmatdetcore.cpp  test_a2dsymmatveccore.cpp
tests/analysis/: CMakeLists.txt  test_analysis.cpp
tests/integrand/: CMakeLists.txt  test_integrand.cpp
tests/multiphysics/: CMakeLists.txt
tests/sparse/: CMakeLists.txt  test_bsr_to_csr_csc.cpp
(+89 files in other folders)
