add_subdirectory(hdiv)
add_subdirectory(paropt)
add_subdirectory(spectral)
add_subdirectory(sphere)
add_subdirectory(test_verify)
add_subdirectory(topology_optimization)
add_subdirectory(topology_optimization_2d)
add_subdirectory(cholesky)
add_subdirectory(kokkos)
add_subdirectory(ad)
add_subdirectory(parallel_element)